Update name from 'Satoshi' to 'Naatanael'

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="cartao">
         <div class="minhas-informacoes">
             <img src="./src/imagens/foto-perfil.jpg" alt="foto de foto-perfil">
-            <h1 class="nome">Satoshi</h1>
+            <h1 class="nome">Naatanael</h1>
             <h2 class="cargo">Desenvolvedor Frontend Jr</h2>
         </div>
         <div class="conteudo">
@@ -64,4 +64,5 @@
 
     <script src="./src/js/index.js"></script>
 </body>
+
 </html>
