Correct name and update personal introduction
Updated personal information and corrected name.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h3 class="sub-titulo">Sobre</h3>
         
                     <div class="descricao">
-                      <p>Oi! meu nome é Satoshi, seja bem-vindo(a)!</p>
+                      <p>Oi! meu nome é Naatanael, seja bem-vindo(a)!</p>
         
                       <p>
                         Sou uma pessoa apaixonada pela programação desde que eu tinha 14
@@ -66,3 +66,4 @@
 </body>
 
 </html>
+
